--- a/TestUIZangle/app/src/main/res/layout/activity_settings.xml
+++ b/TestUIZangle/app/src/main/res/layout/activity_settings.xml
@@ -61,6 +61,42 @@
             android:layout_marginTop="8dp">
 
             <LinearLayout
+                android:id="@+id/backgroundLimiter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Background data"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@android:color/primary_text_light_nodisable" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Only allow background data over wifi"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@android:color/secondary_text_light" />
+            </LinearLayout>
+
+            <CheckBox
+                android:id="@+id/onlyBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:onClick="backgrounder"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp">
+
+            <LinearLayout
                 android:id="@+id/checkingHowOften"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -141,7 +177,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Only notify if assignment is worth at least this many points"
+                    android:text="Always notify if assignment is worth at least this many points"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@android:color/secondary_text_light" />
             </LinearLayout>
@@ -178,7 +214,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Only notify if percentage earned is less than this amount"
+                    android:text="Always notify if percentage earned is less than this amount"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@android:color/secondary_text_light" />
             </LinearLayout>
